--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -42,6 +42,15 @@ dependencies:
   camera: ^0.9.4+5
   intl: ^0.17.0
   image_picker: ^0.8.7+2
+  #####
+  google_maps_flutter: ^2.2.0
+  map_launcher: ^2.5.0+1
+  geolocator: ^7.6.2
+  #####
+  http: ^0.13.6
+  #####
+  flutter_rating_bar: ^4.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
