--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,18 +39,21 @@ dependencies:
   flutter_svg: ^0.22.0
   flutter_spinkit: ^5.1.0
   animate_do: ^3.0.2
-  camera: ^0.9.4+5
   intl: ^0.17.0
   image_picker: ^0.8.7+2
   #####
   google_maps_flutter: ^2.2.0
   map_launcher: ^2.5.0+1
   geolocator: ^7.6.2
+  
+  flutter_dotenv: ^5.0.2
   #####
   http: ^0.13.6
   #####
   flutter_rating_bar: ^4.0.0
-
+  #####
+  url_launcher: ^6.1.11
+  url_launcher_android: ^6.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
